force-app/main/default/objects/OpportunityLineItem/fields/Week_7_DAY__c.field-meta.xml
<CustomField>
    <fullName>Week_7_DAY__c</fullName>
    <label>Week 7-DAY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>